# InCubePlatform

./: .dockerignore  .gitignore  CLAUDE.md  docker-compose.dev.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: bd152577552d_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  errors.py  logging_middleware.py  middleware.py  security.py  sse.py
backend/app/db/: base.py  seed.py  session.py
backend/app/models/: __init__.py  agent_session.py  api_usage.py  auth_token.py  axiom_challenge.py  bank_instance.py  document.py  email_log.py  enums.py  goal.py  journey.py  notification.py  organization.py  perspective.py  setting.py  user.py  vdba.py  vibe_analysis.py  vibe_session.py
backend/app/schemas/: agent.py  analytics.py  auth.py  bank.py  common.py  document.py  email.py  goal.py  health.py  journey.py  notification.py  organization.py  perspective.py  settings.py  vdba.py  vibe.py
backend/app/services/: analytics.py  auth.py  bank.py  boomerang.py  document.py  email.py  export.py  goal.py  journey.py  minio.py  notification.py  notify.py  perspective.py  settings.py  usage.py  vdba.py  vibe.py  vibe_minio.py  vibe_prompts.py  whisper.py
backend/tests/: test_agents.py  test_analytics.py  test_auth.py  test_bank_enhanced.py  test_boomerang_flow.py  test_business_rules.py  test_documents_upload.py  test_edge_cases.py  test_emails.py  test_export.py  test_goals.py  test_health.py  test_journeys.py  test_settings.py  test_usage.py  test_vdba.py  test_vibes.py
(+118 files in other folders)
